--- a/application/all.yaml
+++ b/application/all.yaml
@@ -21,8 +21,7 @@ spec:
     spec:
       containers:
       - name: demo
-        image: demo
-#        image: agilesolutions/demo:latest
+        image: agilesolutions/demo:latest
         securityContext:
           runAsUser: 0
           privileged: true
