--- a/mq/all.yaml
+++ b/mq/all.yaml
@@ -34,8 +34,10 @@ spec:
             cpu: "200m"
             memory: "300Mi"
         env:
-          - name: PORT
-            value : "1414"
+          - name: LICENSE
+            value : accept
+          - name: MQ_QMGR_NAME
+            value : QM1
 ---
 apiVersion: v1
 kind: Service
