--- a/mq/all.yaml
+++ b/mq/all.yaml
@@ -35,9 +35,9 @@ spec:
             memory: "300Mi"
         env:
           - name: LICENSE
-            value : accept
+            value : "accept"
           - name: MQ_QMGR_NAME
-            value : QM1
+            value : "QM1"
 ---
 apiVersion: v1
 kind: Service
