--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,12 @@
 spring.application.name=demo
 
-# create and drop tables and sequences
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-
-# Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=carsystem
-spring.datasource.password=carsystem
-spring.datasource.driver-class-oracle.jdbc.driver.OracleDriver
-
-# HikariCP settings
-# spring.datasource.hikari.*
-
-spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password:
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.show-sql: true
+spring.data.rest.basePath= /api
 
 
 # logging
@@ -22,8 +14,6 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type.descriptor.sql=trace
 logging.level.=in	
-
-spring.data.rest.basePath= /api
 
 server.connection-timeout=5000
 server.port = 8080
