--- a/skaffold.yml
+++ b/skaffold.yml
@@ -4,7 +4,7 @@ build:
   local:
     push: false
   artifacts:
-    - image: agilesolutions/demo:latest
+    - image: agilesolutions/demo
       jibMaven: {}
     - image: ibmcom/mq
       context: ./mq/
