--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:latest
 WORKDIR /opt/src
-COPY ../target/demo.jar /opt/src/demo.jar
+COPY target/demo.jar /opt/src/demo.jar
 EXPOSE 8080
 CMD ["java", "-jar", "/opt/src/demo.jar"]
